--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: UBARSC The Raster Dudes
+title: UBARSC - The UB&A Remote Sensing Centre
 description: >- # this means to ignore newlines until "baseurl:"
   Neil and Sam are very cool and you should use their software.
 baseurl: "" # the subpath of your site, e.g. /blog
